@@ -1,6 +1,5 @@
 <?php
 //This file cannot be called directly, only included.
-define("_ONLYXCANBEAPPLIEDATATIME", "Only %x entities where processed, which is the limit for this operation");
 
 if (str_replace(DIRECTORY_SEPARATOR, "/", __FILE__) == $_SERVER['SCRIPT_FILENAME']) {
  exit;
